# FreeRTOS-FAT-CLI-for-RPi-Pico

src/FreeRTOS+FAT+CLI/: CMakeLists.txt
