add_library(FreeRTOS+FAT+CLI INTERFACE)
target_sources(FreeRTOS+FAT+CLI INTERFACE
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_crc.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_dir.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_error.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_fat.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_file.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_format.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_ioman.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_locking.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_memory.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_stdio.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_string.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_sys.c
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/ff_time.c 
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/dma_interrupts.c
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/ff_sddisk.c
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/sd_card.c
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/SPI/sd_card_spi.c
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/SPI/sd_spi.c
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/SPI/my_spi.c
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/SDIO/sd_card_sdio.c
        ${CMAKE_CURRENT_LIST_DIR}/portable/RP2040/SDIO/rp2040_sdio.c
        ${CMAKE_CURRENT_LIST_DIR}/src/crash.c
        ${CMAKE_CURRENT_LIST_DIR}/src/crc.c
        ${CMAKE_CURRENT_LIST_DIR}/src/ff_utils.c
        ${CMAKE_CURRENT_LIST_DIR}/src/file_stream.c
        ${CMAKE_CURRENT_LIST_DIR}/src/freertos_callbacks.c
        ${CMAKE_CURRENT_LIST_DIR}/src/FreeRTOS_strerror.c
        ${CMAKE_CURRENT_LIST_DIR}/src/FreeRTOS_time.c
        ${CMAKE_CURRENT_LIST_DIR}/src/my_debug.c
        ${CMAKE_CURRENT_LIST_DIR}/src/sd_timeouts.c
        ${CMAKE_CURRENT_LIST_DIR}/src/util.c
)
target_link_libraries(FreeRTOS+FAT+CLI INTERFACE
        cmsis_core
        FreeRTOS-Kernel
        FreeRTOS-Kernel-Heap4
        hardware_adc
        hardware_clocks
        hardware_dma
        hardware_pio
        #hardware_rtc
        hardware_spi
        hardware_timer
        pico_aon_timer
        pico_multicore
        pico_stdlib
        pico_sync
)
target_include_directories(FreeRTOS+FAT+CLI INTERFACE 
        include/ 
        ${CMAKE_CURRENT_LIST_DIR}/../Lab-Project-FreeRTOS-FAT/include/
        portable/RP2040/
)
